--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Authors</h1>
 
 <% @authors.each do |author|%>
-  <h3><a href='/author/show'><%= author.name  %></a></h3>
+  <h3><a href='/authors/show'><%= author.name  %></a></h3>
 <% end %>
