--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome to Authorize</h1>
 
 <ul>
-  <li><a href='/author'>All Authors</a></li>
+  <li><a href='/authors'>All Authors</a></li>
 </ul>
