--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,4 +1,7 @@
-<h1><%= @author.name %></h1>
-
+<h3><%= @author.name %></h3>
+<ul>
+  <li>Living: <%= @author.living %></li>
+  <li>Pullitzer Prizes: <%= @author.pullitzer_prizes %></li>
+</ul>
 
 
