Complete four story

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <h3><%= @book.name %></h3>
 <ul>
   <li>Pages: <%= @book.pages %></li>
-  <li>Title: <%= @book.title %></li>
+  <li>Title: <%= @book.name %></li>
   <li>Genre: <%= @book.genre %></li>
   <li>Fictitious: <%= @book.fictitious %></li>
 </ul>
