Add test and logic for seven story

--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -2,6 +2,7 @@
 <ul>
   <li>Living: <%= @author.living %></li>
   <li>Pullitzer Prizes: <%= @author.pullitzer_prizes %></li>
+  <li>Books: <%= @author.books.count %></li>
 </ul>
 
 
