Add authors link

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,6 @@
 <a href='/books'>Books<a/>
+<a href='/authors'>Authors<a/>
+
 <h3><%= @book.name %></h3>
 <ul>
   <li>Pages: <%= @book.pages %></li>
