Add author-books link to author show page

--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -2,10 +2,10 @@
 <a href='/authors'>Authors<a/>
 
 <h3><%= @author.name %></h3>
+<a href='/authors/<%= @author.id %>/books'>Books by <%= @author.name %><a/>
 <ul>
   <li>Living: <%= @author.living %></li>
   <li>Pullitzer Prizes: <%= @author.pullitzer_prizes %></li>
   <li>Books: <%= @author.books.count %></li>
 </ul>
-
 
