--- a/app/views/author_books/index.html.erb
+++ b/app/views/author_books/index.html.erb
@@ -1,5 +1,5 @@
-<a href='/books'>Books<a/>
-<a href='/authors'>Authors<a/>
+<%= link_to 'All Books', '/books' %>
+<%= link_to 'All Authors', '/authors' %>
 
 <h2><%= @author.name %></h2>
   <h3>Books</h3>
