--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,6 +1,5 @@
-<a href='/books'>Books<a/>
-<a href='/authors'>Authors<a/>
-<h1>All Authors</h1>
+<%= link_to 'All Books', '/books' %>
+<%= link_to 'All Authors', '/authors' %>
 
 
 <% @authors.each do |author|%>
