--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
-<a href='/books'>Books<a/>
-<a href='/authors'>Authors<a/>
+<%= link_to 'All Books', '/books' %>
+<%= link_to 'All Authors', '/authors' %>
 
 <h3><%= @book.name %></h3>
 <ul>
