--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,5 @@
-<a href='/books'>Books<a/>
-
-<a href='/authors'>Authors<a/>
+<%= link_to 'All Books', '/books' %>
+<%= link_to 'All Authors', '/authors' %>
 <h1>Welcome to Authorize</h1>
 
 
