--- a/app/views/author_books/new.html.erb
+++ b/app/views/author_books/new.html.erb
@@ -1,7 +1,7 @@
 <%= link_to 'All Books', '/books' %>
 <%= link_to 'All Authors', '/authors' %>
 
-<%= form_with url: '/author_books', method: :post, local: true do |form| %>
+<%= form_with url: "/authors/#{@author.id}/books", method: :post, local: true do |form| %>
   <%= form.label :name %>
   <%= form.text_field :name %>
   <%= form.label :pages %>
@@ -10,4 +10,5 @@
   <%= form.text_field :genre %>
   <%= form.label :fictitious %>
   <%= form.text_field :fictitious %>
+  <%= form.submit 'Create Book'%>
 <% end %>
