--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,7 +4,7 @@
   <%= form.label :genre %>
   <%= form.text_field :genre %>
   <%= form.label :fictitious %>
-  <%= form.text_field :fictitous %>
+  <%= form.text_field :fictitious %>
   <%= form.label :pages %>
   <%= form.text_field :pages %>
 
