--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,5 +4,7 @@
 <h1>All Books</h1>
 
 <% @books.each do |book|%>
-  <h3><%= book.name  %></h3>
+  <% if book.fictitious == true %>
+    <h3><%= book.name  %></h3>
+  <% end %>
 <% end %>
