Add view logic to support update links

--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -5,4 +5,5 @@
 <% @authors.each do |author|%>
   <h3><%= author.name  %></h3>
   <p><%= author.created_at %></p>
+  <%= link_to "Update #{author.name}", "/authors/#{author.id}/edit" %> 
 <% end %>
