--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -11,5 +11,5 @@
 
 <%= link_to 'Edit Author Entry', "/authors/#{@author.id}/edit" %>
 
-<%= link_to 'Delete Author', "/authors/#{@author.id}" %>
+<%= link_to 'Delete Author', "/authors/#{@author.id}", method: :delete %>
 
